--- a/package.json
+++ b/package.json
@@ -24,17 +24,26 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0-rc.1",
     "@babel/preset-env": "^7.0.0-rc.1",
     "@babel/preset-react": "^7.0.0-rc.1",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^8.0.0-beta.4",
+    "babel-plugin-import": "^1.8.0",
+    "css-loader": "^1.0.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
+    "mini-css-extract-plugin": "^0.4.1",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.22.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
   },
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "buildp": "set NODE_ENV=production&&webpack",
+    "watch": "webpack -w"
   },
   "repository": {
     "type": "git",
