--- a/.babelrc
+++ b/.babelrc
@@ -27,6 +27,7 @@
     "@babel/plugin-proposal-numeric-separator",
     "@babel/plugin-proposal-throw-expressions",
     "@babel/plugin-proposal-export-default-from",
+    "@babel/plugin-proposal-nullish-coalescing-operator",
     ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }]
   ]
 }
