--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,12 @@
 {
   "presets": [
     "@babel/preset-react",
-    "@babel/preset-env"
+    ["@babel/preset-env", {
+      "targets": "chrome >= 67"
+    }]
   ],
   "comments": false,
+  
   "plugins": [
     [
       "@babel/plugin-proposal-pipeline-operator",
