--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "description": "dislido.github.io",
   "main": "index.js",
   "dependencies": {
-    "antd": "^3.8.4",
-    "file-loader": "^1.1.11",
+    "antd": "^3.10.3",
     "prop-types": "^15.6.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "url-loader": "^1.1.0"
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -41,13 +39,16 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.3",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
-    "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
     "uglifyjs-webpack-plugin": "^1.3.0",
+    "url-loader": "^1.1.2",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0"
   },
