--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@assets/*": ["./assets/*"],
+      "@component/*": ["./src/component/*"],
       "@page/*": ["./src/page/*"],
       "@util/*": ["./src/util/*"],
       "@util": ["./src/util"]
