--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-loader": "^8.0.0",
     "babel-plugin-import": "^1.8.0",
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.0",
     "eslint": "^5.4.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -40,6 +41,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^1.1.11",
+    "html-webpack-include-assets-plugin": "^1.0.6",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
@@ -49,13 +51,14 @@
     "style-loader": "^0.22.1",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.2",
-    "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0"
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
   },
   "scripts": {
-    "build": "webpack",
-    "buildp": "set NODE_ENV=production&&webpack",
-    "watch": "webpack -w"
+    "build": "webpack --progress",
+    "buildp": "set NODE_ENV=production&&webpack --progress",
+    "builddll": "webpack --progress --config webpack.vendor.config.js",
+    "watch": "webpack -w --progress"
   },
   "repository": {
     "type": "git",
