--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "dependencies": {
     "antd": "^3.10.3",
     "prop-types": "^15.6.2",
-    "react": "^16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
+    "react-router": "^4.4.0-beta.6",
+    "react-router-dom": "^4.4.0-beta.6"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -30,7 +30,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^8.0.0",
-    "babel-plugin-import": "^1.8.0",
+    "babel-plugin-import": "^1.11.0",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.0",
